Clean up get_stats

--- a/cache_stats/templates/memcached/server_list.html
+++ b/cache_stats/templates/memcached/server_list.html
@@ -90,8 +90,8 @@
       <tr>
         <th>Commands</th>
         <td>
-          <div>Gets: <span>{{ stats.cmd_get }} ({{ stats.cmd_get_per_second|floatformat:2 }} per sec.)</span></div>
-          <div>Sets: <span>{{ stats.cmd_set }} ({{ stats.cmd_set_per_second|floatformat:2 }} per sec.)</span></div>
+          <div>Gets: <span>{{ stats.cmd_get }} ({{ stats.gets_per_second|floatformat:2 }} per sec.)</span></div>
+          <div>Sets: <span>{{ stats.cmd_set }} ({{ stats.sets_per_second|floatformat:2 }} per sec.)</span></div>
         </td>
       </tr>
 
