--- a/cache_stats/templates/memcached/server_list.html
+++ b/cache_stats/templates/memcached/server_list.html
@@ -9,7 +9,7 @@
       font-size: 12px;
       width: 960px;
       margin: 10px auto 0;
-      font-family: "Lucidia Sans", Verdana, sans-serif;
+      font-family: "Lucida Sans", Verdana, sans-serif;
       }
 
       table {
